# librechat-production

./: .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.librechat  NEXT_STEPS.md  README.md  clay-webhook-action.yaml  deploy-to-production.bat  deploy-to-production.sh  docker-compose.override.yml  docker-compose.yml  librechat.yaml  package-lock.json  package.json  pyproject.toml  restart-librechat.bat  restart-librechat.sh  setup-mcp.bat  setup-mcp.sh  wrangler-config.toml  wrangler.toml
config/: unban-user.js
docs/: cli.md  mcp_server.md
edgar_sec/: __init__.py  client.py
edgar_sec/utils/: __init__.py  logging.py
src/: server.py
src/edgar_sec/: run.py
src/edgar_sec/utils/: decorators.py  serializer.py
tests/: test_client.py  test_run.py  test_server.py
workflows/: lint.yml
